--- a/DirectXGame/DirectXGame.vcxproj
+++ b/DirectXGame/DirectXGame.vcxproj
@@ -218,6 +218,8 @@
     <ClCompile Include="BNS_EditorAction.cpp" />
     <ClCompile Include="GlobalSemaphore.cpp" />
     <ClCompile Include="IETThread.cpp" />
+    <ClCompile Include="IExecutionEvent.cpp" />
+    <ClCompile Include="IFinishedTask.cpp" />
     <ClCompile Include="IMGUI\imgui.cpp" />
     <ClCompile Include="IMGUI\imgui_demo.cpp" />
     <ClCompile Include="IMGUI\imgui_draw.cpp" />
@@ -228,8 +230,12 @@
     <ClCompile Include="BNS_PhysicsComponent.cpp" />
     <ClCompile Include="BNS_PhysicsSystem.cpp" />
     <ClCompile Include="BNS_MultipleScene_UI.cpp" />
+    <ClCompile Include="IWorkerAction.cpp" />
+    <ClCompile Include="PoolWorkerThread.cpp" />
     <ClCompile Include="SceneReader.cpp" />
     <ClCompile Include="SceneWriter.cpp" />
+    <ClCompile Include="StreamAssetLoader.cpp" />
+    <ClCompile Include="ThreadPool.cpp" />
     <ClCompile Include="Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -276,6 +282,8 @@
     <ClInclude Include="BNS_ViewMode_UI.h" />
     <ClInclude Include="GlobalSemaphore.h" />
     <ClInclude Include="IETThread.h" />
+    <ClInclude Include="IExecutionEvent.h" />
+    <ClInclude Include="IFinishedTask.h" />
     <ClInclude Include="IMGUI\imconfig.h" />
     <ClInclude Include="IMGUI\imgui.h" />
     <ClInclude Include="IMGUI\imgui_impl_dx11.h" />
@@ -284,6 +292,7 @@
     <ClInclude Include="IMGUI\imstb_rectpack.h" />
     <ClInclude Include="IMGUI\imstb_textedit.h" />
     <ClInclude Include="IMGUI\imstb_truetype.h" />
+    <ClInclude Include="IWorkerAction.h" />
     <ClInclude Include="Matrix4x4.h" />
     <ClInclude Include="BNS_MenuToolbar_UI.h" />
     <ClInclude Include="BNS_Mesh.h" />
@@ -311,8 +320,11 @@
     <ClInclude Include="BNS_UICreation.h" />
     <ClInclude Include="BNS_UIManager.h" />
     <ClInclude Include="BNS_UI_Prerequisites.h" />
+    <ClInclude Include="PoolWorkerThread.h" />
     <ClInclude Include="SceneReader.h" />
     <ClInclude Include="SceneWriter.h" />
+    <ClInclude Include="StreamAssetLoader.h" />
+    <ClInclude Include="ThreadPool.h" />
     <ClInclude Include="Utils.h" />
     <ClInclude Include="Vector2D.h" />
     <ClInclude Include="Vector3D.h" />
