- added adding objects

--- a/DirectXGame/DirectXGame.vcxproj
+++ b/DirectXGame/DirectXGame.vcxproj
@@ -231,6 +231,7 @@
     <ClCompile Include="BNS_PhysicsSystem.cpp" />
     <ClCompile Include="BNS_MultipleScene_UI.cpp" />
     <ClCompile Include="IWorkerAction.cpp" />
+    <ClCompile Include="P3_ObjectID.cpp" />
     <ClCompile Include="PoolWorkerThread.cpp" />
     <ClCompile Include="SceneReader.cpp" />
     <ClCompile Include="SceneWriter.cpp" />
@@ -304,6 +305,7 @@
     <ClInclude Include="BNS_PhysicsComponent.h" />
     <ClInclude Include="BNS_PhysicsSystem.h" />
     <ClInclude Include="BNS_MultipleScene_UI.h" />
+    <ClInclude Include="P3_ObjectID.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="BNS_Prerequisites.h" />
     <ClInclude Include="BNS_PrimitiveCreation.h" />
