- added button states

--- a/DirectXGame/imgui.ini
+++ b/DirectXGame/imgui.ini
@@ -230,14 +230,14 @@ DockSpace                                 ID=0x3BC79352 Window=0x4647B76E Pos=19
   DockNode                                ID=0x00000023 Parent=0x3BC79352 SizeRef=1586,989 Split=Y
     DockNode                              ID=0x00000021 Parent=0x00000023 SizeRef=1882,62 Selected=0xD66B2E08
     DockNode                              ID=0x00000022 Parent=0x00000023 SizeRef=1882,925 Split=Y
-      DockNode                            ID=0x0000001F Parent=0x00000022 SizeRef=1882,692 Split=Y
+      DockNode                            ID=0x0000001F Parent=0x00000022 SizeRef=1882,724 Split=Y
         DockNode                          ID=0x0000001B Parent=0x0000001F SizeRef=1900,62 Selected=0xEB0B07B8
         DockNode                          ID=0x0000001C Parent=0x0000001F SizeRef=1900,909 Split=X
           DockNode                        ID=0x0000001D Parent=0x0000001C SizeRef=1424,973 Split=Y
             DockNode                      ID=0x00000017 Parent=0x0000001D SizeRef=1900,721 Split=X
               DockNode                    ID=0x00000007 Parent=0x00000017 SizeRef=942,989 Split=Y Selected=0x0154588A
-                DockNode                  ID=0x00000025 Parent=0x00000007 SizeRef=1351,407 Selected=0x672F982D
-                DockNode                  ID=0x00000026 Parent=0x00000007 SizeRef=1351,283 Selected=0x7006508D
+                DockNode                  ID=0x00000025 Parent=0x00000007 SizeRef=1351,426 Selected=0x0154588A
+                DockNode                  ID=0x00000026 Parent=0x00000007 SizeRef=1351,296 Selected=0x7006508D
               DockNode                    ID=0x00000008 Parent=0x00000017 SizeRef=660,989 Split=Y
                 DockNode                  ID=0x00000013 Parent=0x00000008 SizeRef=1882,837 Split=Y
                   DockNode                ID=0x0000000B Parent=0x00000013 SizeRef=1882,773 Split=Y
