- added progress bar when click

--- a/DirectXGame/imgui.ini
+++ b/DirectXGame/imgui.ini
@@ -225,6 +225,16 @@ Pos=740,463
 Size=272,184
 Collapsed=0
 
+[Window][Progress Bar Window]
+Pos=60,60
+Size=32,40
+Collapsed=0
+
+[Window][Progress Popup]
+Pos=999,491
+Size=32,40
+Collapsed=0
+
 [Docking][Data]
 DockSpace                                 ID=0x3BC79352 Window=0x4647B76E Pos=19,72 Size=1882,989 Split=X Selected=0xD76812E7
   DockNode                                ID=0x00000023 Parent=0x3BC79352 SizeRef=1586,989 Split=Y
