- fixed popup progressbar

--- a/DirectXGame/imgui.ini
+++ b/DirectXGame/imgui.ini
@@ -231,8 +231,13 @@ Size=32,40
 Collapsed=0
 
 [Window][Progress Popup]
-Pos=999,491
+Pos=959,561
 Size=32,40
+Collapsed=0
+
+[Window][Progress Bar]
+Pos=1014,328
+Size=279,77
 Collapsed=0
 
 [Docking][Data]
