--- a/DirectXGame/imgui.ini
+++ b/DirectXGame/imgui.ini
@@ -26,7 +26,7 @@ DockId=0x00000005,1
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1900,1037
+Size=1916,997
 Collapsed=0
 
 [Window][Settings]
@@ -37,7 +37,7 @@ Collapsed=0
 
 [Window][View Mode]
 Pos=8,96
-Size=138,671
+Size=138,631
 Collapsed=0
 DockId=0x00000007,0
 
@@ -114,13 +114,13 @@ DockId=0x0000000C,0
 
 [Window][Hierarchy##1]
 Pos=8,96
-Size=138,671
+Size=138,631
 Collapsed=0
 DockId=0x00000007,1
 
 [Window][Scene View##2]
 Pos=148,96
-Size=1210,671
+Size=1226,631
 Collapsed=0
 DockId=0x00000016,0
 
@@ -138,7 +138,7 @@ DockId=0x00000019,0
 
 [Window][Scene View##3]
 Pos=148,96
-Size=1210,671
+Size=1226,631
 Collapsed=0
 DockId=0x00000016,2
 
@@ -168,13 +168,13 @@ DockId=0x0000001A,0
 
 [Window][Scene View##4]
 Pos=148,96
-Size=1210,671
+Size=1226,631
 Collapsed=0
 DockId=0x00000016,1
 
 [Window][Scene View##5]
 Pos=148,96
-Size=1210,671
+Size=1226,631
 Collapsed=0
 DockId=0x00000016,3
 
@@ -197,26 +197,26 @@ Collapsed=0
 DockId=0x0000001B,0
 
 [Window][Content Browser##8]
-Pos=8,769
-Size=1350,260
+Pos=8,729
+Size=1366,260
 Collapsed=0
 DockId=0x00000020,0
 
 [Window][Inspector##10]
-Pos=1360,32
-Size=532,997
+Pos=1376,32
+Size=532,957
 Collapsed=0
 DockId=0x00000024,0
 
 [Window][Editor State##11]
 Pos=8,32
-Size=1350,62
+Size=1366,62
 Collapsed=0
 DockId=0x00000021,0
 
 [Window][Multiple Scene]
-Pos=8,769
-Size=1350,260
+Pos=8,729
+Size=1366,260
 Collapsed=0
 DockId=0x00000020,1
 
@@ -236,12 +236,12 @@ Size=32,40
 Collapsed=0
 
 [Window][Progress Bar]
-Pos=1014,328
-Size=279,77
+Pos=513,222
+Size=642,152
 Collapsed=0
 
 [Docking][Data]
-DockSpace                                 ID=0x3BC79352 Window=0x4647B76E Pos=18,65 Size=1884,997 Split=X Selected=0xD76812E7
+DockSpace                                 ID=0x3BC79352 Window=0x4647B76E Pos=10,63 Size=1900,957 Split=X Selected=0xD76812E7
   DockNode                                ID=0x00000023 Parent=0x3BC79352 SizeRef=1348,989 Split=Y
     DockNode                              ID=0x00000021 Parent=0x00000023 SizeRef=1882,62 Selected=0xD66B2E08
     DockNode                              ID=0x00000022 Parent=0x00000023 SizeRef=1882,925 Split=Y
@@ -250,7 +250,7 @@ DockSpace                                 ID=0x3BC79352 Window=0x4647B76E Pos=18
         DockNode                          ID=0x0000001C Parent=0x0000001F SizeRef=1900,909 Split=X
           DockNode                        ID=0x0000001D Parent=0x0000001C SizeRef=1424,973 Split=Y
             DockNode                      ID=0x00000017 Parent=0x0000001D SizeRef=1900,721 Split=X
-              DockNode                    ID=0x00000007 Parent=0x00000017 SizeRef=138,989 Selected=0x672F982D
+              DockNode                    ID=0x00000007 Parent=0x00000017 SizeRef=138,989 Selected=0x0154588A
               DockNode                    ID=0x00000008 Parent=0x00000017 SizeRef=1208,989 Split=Y
                 DockNode                  ID=0x00000013 Parent=0x00000008 SizeRef=1882,837 Split=Y
                   DockNode                ID=0x0000000B Parent=0x00000013 SizeRef=1882,773 Split=Y
